8/13/2003
	- When looking up a one label unqualified name which fails to match
	  all searchlist entries, don't append the root label and try again.
	  This is recommended by RFC 1536, section 6: "Only if the name, so
	  generated, returns an NXDOMAIN is the original name tried as a Fully
	  Qualified Domain Name. And only if it contains at least one period."

7/18/2003
	- Remove lots of unused imports. (Jared Richardson <jaredr@nc.rr.com>)

7/14/2003
	- Fix a long-existing bug where empty records (in update messages)
	  were incorrectly handled
	  (reported by Kevin C Miller <kevinm@andrew.cmu.edu>

6/22/2003
	- DNS types and classes are now represented as ints, not shorts.
	  This is an API change, but allows the full type/class range
	  to be used.

6/18/2003
	- Quoted strings didn't handle \ddd escapes.

6/17/2003
	- Fix an ArrayIndexOutofBoundsException triggered by load balancing
	  in the ExtendedResolver.
	  (reported by Norbert Desautels <ndesautels@gdgsystems.com>)

6/1/2003
	- Add the Name.relativize() method to convert an absolute name to
	  a name relative to a specified origin.
	- Add the Update class, which contains helper routines used to
	  construct dynamic update messages.

5/28/2003
	- Replace org.xbill.DNS.utils.MyStringTokenizer with
	  org.xbill.DNS.Tokenizer, which is a far more robust and correct
	  DNS tokenizer.  Convert everything to use it.
	- Fix text format of TXT, NAPTR, and HINFO records.

5/28/2003
	- When constructing a record, check that all names are absolute.

5/27/2003
	- 1.3.3 released.

4/26/2003
	- The master file parser should accept BIND format TTLs.

4/10/2003
	- The Inet6Address class incorrectly parsed some addresses.
	  (reported by steve weiland <steve@widge.net>)

4/7/2003
	- Records were not sorted properly (reported by
	  Joseph K Shraibman <jks@akula.com>)

4/2/2003
	- Fix off-by-one error in Name.compareTo (David Blacka)

3/30/2003
	- Add the ZoneTransferIn class, which performs incoming AXFR/IXFR